Issue #ISAICP-2906: improve spacing between featured stats and buttons in the group header

--- a/web/themes/joinup/prototype/sass/components/_featured.sass
+++ b/web/themes/joinup/prototype/sass/components/_featured.sass
@@ -55,6 +55,8 @@
   letter-spacing: 2px
   text-transform: uppercase
   color: #fff
+  +breakpoint(mobile)
+    margin-bottom: 20px
   &:after
     position: absolute
     right: 0
@@ -76,7 +78,7 @@
   padding: 0 15px
   +border-radius(3px)
   +breakpoint(mobile)
-    margin: 0 20px 0 0
+    margin: 0 10px
   .stats__column
     float: left
     padding: 15px
@@ -95,6 +97,10 @@
 
 .featured__form-button
   display: inline-block
+  margin: 20px 10px 0
+
+.releases-overview
+  margin: 10px
 
 // Modifiers
 // --------------------------------------------------
